--- a/ASP.NETMVCCRUD/Views/Employees/Index.cshtml
+++ b/ASP.NETMVCCRUD/Views/Employees/Index.cshtml
@@ -26,6 +26,7 @@
                 <td>@employee.Password</td>
                 <td>@employee.Salary</td>
                 <td>@employee.CreatedAt.ToString("dd-mm-yyyy")</td>
+                <td><a href="/Employees/View/@employee.Id">View</a></td>
             </tr>
         }
     </tbody>
